--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
       </div>
       <div class="header__title">Expert</div>
-      <div class="consultation">
-        <a href="#" class="consultation__link">Получить консультацию</a>
-        <div class="arrow"><span class="circle"></span></div>
+      <div class="consultation main-btn">
+        <a href="#" class="consultation__link main-btn__link">Получить консультацию</a>
+        <div class="arrow main-btn__arrow"><span class="circle main-btn__circle"></span></div>
       </div>
     </div>
     <div class="header__line">
@@ -64,7 +64,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main class="main">
     <div class="container">
       <section class="special-offer">
         <h2 class="section__name">Уникальное предложение</h2>
@@ -102,24 +102,307 @@
             <p class="section__text">Утилизация старой двери</p>
           </li>
         </ul>
-        <div class="section__row">
+        <div class="block__row block__view">
           <div class="section__col-2">
-            <div class="component">
-              <span class="arrow__component"></span>
+            <div class="block__row">
+              <div class="component">
+              </div>
+              <div class="special-offer__card_small">
+                <div class="special-offer__box_small">
+                  <img src="img/door355.png" alt="дверь на">
+                </div>
+                <div class="sale sale_right">35 000 &#8381;</div>
+              </div>
+            </div>
+            <div class="block__row">
+              <div class="special-offer__card">
+                <div class="sale">26 800 &#8381;</div>
+                <div class="special-offer__box">
+                  <img src="img/door354.png" alt="дверь">
+                </div>
+              </div>
             </div>
           </div>
           <div class="section__col">
-            <div class="special-offer__box">
+            <div class="special-offer__box_big">
               <img src="img/door44.png" alt="дверь на">
             </div>
             <div class="sale">44 000 &#8381;</div>
           </div>
         </div>
+        <div class="block__row block__row-pages">
+          <div class="main-btn">
+            <a href="#" class="main-btn__link">Перейти в каталог</a>
+            <div class="main-btn__arrow"><span class="main-btn__circle"></span></div>
+          </div>
+          <div class="pages">
+            1 <span class="pages__line"></span> 2
+          </div>
+        </div>
       </section>
+      <section class="benefits">
+        <h2 class="section__name">Приемущества</h2>
+        <div class="block__row">
+          <div class="benefits__content">
+            <h3 class="benefits__title">Expert - это достижение самых высоких целей на рынке</h3>
+            <p class="benefits__text">Поэтому мы имеем в своем арсенале самые высокотехнологичные материалы. Если вам
+              нужен уникальный дизайн, уникальный цвет и сложное техническое оснащение-Expert с радостью предложит для
+              вас решение. </p>
+          </div>
+          <div class="benefits__img"></div>
+        </div>
+        <div class="section__col-2">
+          <div class="benefits__content">
+            <h3 class="benefits__title benefits__title-500">Входная дверь - это вход в ваш дом, поэтому мы серьезно
+              относимся к безопасности </h3>
+            <p class="benefits__text benefits__text-500">Лучшие в отрасли функции безопасности, такие как закаленное
+              безопасное стекло, петли и крючки. Для этого наши двери должны были пройти проверку по всем аспектам
+              безопасности.</p>
+          </div>
+          <div class="benefits__img-500"></div>
+        </div>
+        <div class="block__row">
+          <div class="block__col_right">
+            <div class="benefits__content">
+              <h3 class="benefits__title benefits__title-700">Входные двери Expert изготавливаются под ваши размеры, что
+                делает их более теплоэффективными</h3>
+              <p class="benefits__text benefits__text-700">Наши двери из ПВХ класса A + 21 являются самыми теплыми и
+                безопасными из имеющихся. Мы также менее терпимы к зазорам, чем другие поставщики, поэтому мы используем
+                специальную отделку вокруг дверной коробки для более аккуратной отделки и предотвращения попадания
+                холодного воздуха и тепла внутрь.</p>
+            </div>
+            <div class="benefits__img benefits__img-700"></div>
+          </div>
+        </div>
+        <div class="block__row">
+          <img src="img/Expert.png" alt="Эксперт" class="expert-img">
+        </div>
+        <div class="block__row block__row-home">
+          <div class="block__col-300">
+            <div class="col-300__img"></div>
+            <h4 class="block__title">Для дома</h4>
+            <p class="block__text">Теплые двери с терморазрывом, созданы чтобы согревать и радовать эстетикой</p>
+            <div class="main-btn main-btn-benefits">
+              <a href="#" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
+              <div class="main-btn__arrow main-btn-benefits__arrow"><span
+                  class="main-btn__circle main-btn-benefits__circle"></span></div>
+            </div>
+          </div>
+          <div class="block__col-450">
+            <h4 class="block__title block__title-600">Для квартиры</h4>
+            <p class="block__text block__text-600">Стильные решения для тех, кто предпочетает жить в городе</p>
+            <div class="main-btn-600 main-btn-benefits">
+              <a href="#" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
+              <div class="main-btn__arrow main-btn-benefits__arrow"><span
+                  class="main-btn__circle main-btn-benefits__circle"></span></div>
+            </div>
+            <div class="col-600__img"></div>
+          </div>
+        </div>
+      </section>
+      <section class="difference__section">
+        <h2 class="section__name">Отличие Expert от китайских дверей</h2>
+        <div class="block__row section__row">
+          <h3 class="benefits__title difference__title">Сэкономить и купить дешевую дверь китайского производства или
+            приобрести добротную конструкцию от российского производителя.</h3>
+          <div class="difference__info section__col">
+            <p class="block__text difference__text">Чтобы сделать правильный выбор, нужно изучить особенности дверей
+              от КНР и РФ.</p>
+            <p class="block__text difference__text">
+              Мы рассмотрим, в чем различие дверей, сделанных в Китае и в России, на что важно обратить внимание при
+              выборе двери, какие проблемы могут возникнуть с китайской входной дверью</p>
+          </div>
+        </div>
+        <ul class="section__col col__items">
+          <li class="col__item">
+            <p class="section__text">Цена</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Толщина металла и вес двери</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Размеры</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Надежность запорных устройств</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Фурнитура</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Наполнение дверей</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Дизайн и отделка</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Срок эксплуатации</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Как быстро распознать китайскую дверь</p><span class="accordion__arrow"></span>
+          </li>
+          <li class="col__item">
+            <p class="section__text">Вывод</p><span class="accordion__arrow"></span>
+          </li>
+        </ul>
+      </section>
+      <section class="safety__section">
+        <h2 class="section__name">Дополнительная безопасность</h2>
+        <div class="block__row">
+          <h3 class="benefits__title difference__title">Сэкономить и купить дешевую дверь китайского производства или
+            приобрести добротную конструкцию от российского производителя.</h3>
+          <div class="difference__info section__col">
+            <p class="block__text safety__text">Чтобы максимально обезопасить вас, мы предлагаем надежные конструкции с
+              дополнительным функционалом.</p>
+            <p class="block__text safety__text">Прочность конструкции выступает гарантией безопасности от взлома. Даже
+              самые бюджетные варианты моделей в нашей компании имеют не низкий класс взломостойкости. </p>
+          </div>
+        </div>
+        <div class="block__row safety-block__row">
+          <div class="section__col-2 safety-section__col-2">
+            <h6 class="safety__section-title">Штыревой антисрез</h6>
+            <div class="main-btn-600 main-btn-safety">
+              <a href="#" class="main-btn__link main-btn-benefits__link">Узнать стоимость</a>
+              <div class="main-btn__arrow main-btn-benefits__arrow"><span
+                  class="main-btn__circle main-btn-benefits__circle"></span>
+              </div>
+            </div>
+          </div>
+          <div class="section__col">
+            <div class="safety-block__img"></div>
+            <p class="benefits__text block__text-400">Штыревой антисрез — это дополнительная система защиты двери,
+              которая не позволяет вскрыть дверь со стороны петель если злоумышленник их срежет.</p>
+            <p class="block__text block__text-385">При закрытой двери — штырь входит в отверстие в лутке и, если петли
+              будут срезаны — не даст злоумышленнику получить доступ в квартиру (дом), так как у него не будет
+              возможности отогнуть дверь.</p>
+            <p class="block__text block__text-more">Подробнее<span
+                class="accordion__arrow accordion__arrow-more"></span></p>
+          </div>
+        </div>
+        <div class="block__row safety-block__row">
+          <div class="section__col-2">
+            <div class="safety-block__img-500"></div>
+          </div>
+          <div class="section__col">
+            <h6 class="safety__section-title safety__section-title_left">Система антивор</h6>
+            <p class="benefits__text block__text-400">Система антивор — дополнительная опция безопасности входной двери.
+              Злоумышленник не сможет тихо что-то сделать с такой дверью.</p>
+            <p class="block__text block__text-420">Дополнительные ребра жесткости. Дополнительная защита замков с двух
+              сторон листами металла толщиной 3 мм.
+              Согнуть, отогнуть, тихо «подковырнуть» и т.д. — никак нельзя.</p>
+            <p class="block__text block__text-420">Данная конструкция является дополнительной системой безопасности,
+              которую мы можем реализовать на любой входной двери, заказанной у нас — по Вашему желанию.</p>
+            <div class="main-btn-benefits">
+              <a href="#" class="main-btn__link main-btn-benefits__link">Узнать стоимость</a>
+              <div class="main-btn__arrow main-btn-benefits__arrow"><span
+                  class="main-btn__circle main-btn-benefits__circle"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="block__row safety-block__row">
+          <div class="section__col-2 safety-section__col-2">
+            <h6 class="safety__section-title block__text-420">Дополнительная защита примыкания</h6>
+            <div class="main-btn-600 main-btn-safety">
+              <a href="#" class="main-btn__link main-btn-benefits__link">Узнать стоимость</a>
+              <div class="main-btn__arrow main-btn-benefits__arrow"><span
+                  class="main-btn__circle main-btn-benefits__circle"></span>
+              </div>
+            </div>
+          </div>
+          <div class="section__col">
+            <div class="safety-block__img safety-block__img-bg"></div>
+            <p class="benefits__text block__text-400">Дополнительная защита примыкания — дополнительная опция безопасности входной двери.</p>
+            <p class="block__text benefits__text-500">Со стороны притвора двери наваривается «квадрат», который не позволит злоумышленнику заложить лом или фомку между луткой и дверью, чтобы отогнуть ее. На фото этот «квадрат» обозначен красным цветом. Также существуют вариации с защитой по всему периметру двери с использованием полосы. </p>
+              <p class="block__text benefits__text-500">
+              При установке двери полоса прячется под наличник, визуально не обнаруживается и не портит вид двери. Тихо подобраться к замку с такой дополнительной защитой попросту не удастся.</p>
+              <p class="block__text benefits__text-500">
+              Данная конструкция является дополнительной системой безопасности, которую мы можем реализовать на любой входной двери, заказанной у нас — по Вашему желанию.</p>
+          </div>
+        </div>
+      </section>
+      <section class="reviews__section">
+        <h2 class="section__name">Отзывы о нас</h2>
+        <div class="block__row">
+          <div class="section__col-2">
+            <div class="safety-block__img-500 reviews__img"></div>
+          </div>
+          <div class="section__col reviews__col">
+            <div class="reviews__row">
+              <h3 class="benefits__title">Алексей</h3>
+              <p class="block__text block__text-385 block__text-reviews">Честное слово, роскошная дверь Expert "Профессор NEW". Брал в Тамбове. Уложиться в 25000 (со скидками) и заиметь такую красоту, просто не ожидал.</p>
+            </div>
+            <div class="block__row">
+              <div class="pages reviews-pages">
+                1 <span class="pages__line"></span> 12
+              </div>
+              <div class="component"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="callback__section">
+        <div class="section__col section__col-700">
+          <div class="callback__row">
+            <div class="callback__col">
+                <p class="callback__title">Мы перезвоним вам в течение короткого времени</p>
+                <p class="block__text callback__text">Поможем выбрать дверь и ответим на любые вопросы</p>
 
+            <div class="callback__tel">Телефон
+              <input type="tel" name="phone" id="">
+            </div>
+            <p class="personal-data">
+              Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
+              <a href="#">персональных данных</a>
+            </p>
+          </div>
+            <div class="callback__col">
+              <button class="callback__btn">Отправить</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__row">
+        <div class="footer__col">
+          <div class="footer__row-top">
+            <a href="index.html" class="footer__logo">Expert</a>
+            <ul class="footer__menu">
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Каталог</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Как выбрать  двери</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Акции</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">О производителе</a>
+              </li>
+              <li class="footer__menu-item">
+                <a href="" class="footer__menu-link">Карта сайта</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__row-bottom">
+            <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
+            <a href="" class="footer__bottom-link">Обработка персональных данных</a>
+            <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
+          </div>
+        </div>
+        <div class="footer__col_right">
+          <a href="tel:+7(800)666 66 66" class="bottom__link-tel">8 800 666 66 66</a>
+          <p class="footer__text">Бесплатный звонок</p>
+          <a href="#" class="social__link">Instagtam</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
