--- a/catalog.html
+++ b/catalog.html
@@ -252,7 +252,10 @@
     </div>
     <section class="catalog-ofert__section">
       <div class="container catalog__special-offer">
-        <h2 class="section__name">Уникальное предложение</h2>
+        <div class="block__row">
+          <h2 class="section__name">Уникальное предложение</h2>
+          <div class="newcomer__close">&#10005;</div>
+        </div>
         <div class="block__row">
           <div class="section__col">
             <h3 class="section__title">В стоимость двери входит</h3>
@@ -453,7 +456,10 @@
               <div class="main-btn__arrow newcomer-btn__arrow"><span
                   class="main-btn__circle newcomer-btn__circle"></span></div>
             </div>
-            <div class="newcomer__booster"></div>
+            <div class="newcomer__bullet">
+              <span class="bullet bullet__active"></span>
+              <span class="bullet"></span>
+            </div>
           </div>
         </div>
       </div>
