--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="container container__header">
       <div class="header__top-row">
         <img src="img/logo.svg" alt="Логотип" class="header__logo">
+        <a href="index.html" class="main__link"></a>
         <div class="header__menu">
           <ul class="header__menu-items">
             <li class="header__menu-item">
