--- a/card-standart.html
+++ b/card-standart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="catalog__header">
     <div class="container">
@@ -89,7 +91,7 @@
         </div>
         <div class="card__plus">
           <div class="card__plus-numb">02</div>
-          <div class="card__plus-tatle">Бесплатный                                           выезд мастера</div>
+          <div class="card__plus-tatle">Бесплатный выезд мастера</div>
         </div>
         <div class="card__plus">
           <div class="card__plus-numb">03</div>
@@ -108,21 +110,25 @@
       <div class="card-service__row block__row">
         <div class="block__col">
           <h4 class="card-service__row-title">Техническое обслуживание</h4>
-          <p class="block__text card-service__row-text">Компания Expert произведет замену уплотнительных резинок через год </p>
+          <p class="block__text card-service__row-text">Компания Expert произведет замену уплотнительных резинок через
+            год </p>
         </div>
         <div class="card-service__img card-service__img-1"></div>
       </div>
       <div class="card-service__row block__row">
         <div class="block__col">
           <h4 class="card-service__row-title">Скидка 10 %</h4>
-          <p class="block__text card-service__row-text">При заказе дверей в компании Expert вы получаете пожизненную скидку на последующие двери</p>
+          <p class="block__text card-service__row-text">При заказе дверей в компании Expert вы получаете пожизненную
+            скидку на последующие двери</p>
         </div>
         <div class="card-service__img card-service__img-2"></div>
       </div>
       <div class="card-service__row block__row">
         <div class="block__col">
           <h4 class="card-service__row-title">Средство по уходу</h4>
-          <p class="block__text card-service__row-text">Любой замок входной двери может легко выйти из строя, если не осуществлять за ним минимальный уход. Лучший способ избежать ремонта и больших трат – это своевременная профилактика, которая продлит службу вашего замка.</p>
+          <p class="block__text card-service__row-text">Любой замок входной двери может легко выйти из строя, если не
+            осуществлять за ним минимальный уход. Лучший способ избежать ремонта и больших трат – это своевременная
+            профилактика, которая продлит службу вашего замка.</p>
         </div>
         <div class="card-service__img card-service__img-3"></div>
       </div>
@@ -130,8 +136,189 @@
   </section>
   <section class="card-options__section">
     <div class="container">
+      <ul class="card__row">
+        <li class="options__item options__item_active">Характеристики</li>
+        <li class="options__item">Гарантии </li>
+        <li class="options__item">Доставка и установка</li>
+        <li class="options__item">Отзывы</li>
+        <li class="options__item">Условия возврата</li>
+      </ul>
+      <div class="card__option">
+        <ul class="block__row">
+          <li class="card-option__item card-option__item_active">Общие характиристики</li>
+          <li class="card-option__item">Защита от взлома и вскрытия</li>
+          <li class="card-option__item">Декоративная отделка</li>
+          <li class="card-option__item">Фурнитура</li>
+          <li class="card-option__item">Тепло- и звукоизоляция</li>
+          <li class="card-option__item">Герметичность</li>
+          <li class="card-option__item">Удобство эксплуатации</li>
+        </ul>
+        <table class="options__table   options__table_hidden">
+          <tr>
+            <td>Производитель <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Наименование изделия <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Направление открывание <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Сторона открывания <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Толщина полотна двери <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Тип дверной коробки <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Показатель звукоизоляции <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Индивидуальный размер двери, ширина <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Индивидуальный размер двери, высота <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Вес двери (Минимальный)<span>-</span></td>
+          </tr>
+        </table>
+        <table class="options__table">
+          <tr>
+            <td>Количество листов металла<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Толщина металла<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Количество ребер жесткости<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Количество противосъемных фиксаторов (статические ригели)<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Количество замков<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Марка замков<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Класс замков<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Броненакладка <span>-</span></td>
+          </tr>
+          <tr>
+            <td>Бронепакет<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Ночная задвижка<span>-</span></td>
+          </tr>
+        </table>
+        <table class="options__table">
+          <tr>
+            <td>Покрытие полотна и коробки<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Цвет покрытия<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Отделка снаружи<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Отделка изнутри<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Декоративный порог<span>-</span></td>
+          </tr>
+        </table>
+        <table class="options__table">
+          <tr>
+            <td>Цвет фурнитруры<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Ручка<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Доводчик<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Порог<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Декор петель<span>-</span></td>
+          </tr>
+        </table>
+        <table class="options__table">
+          <tr>
+            <td>Наполнитель дверного полотна<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Толщина слоя наполнителя<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Класс горючести наполнителя<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Температура применения наполнителя<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Утепление дверной коробки<span>-</span></td>
+          </tr>
+        </table>
+        <table class="options__table">
+          <tr>
+            <td>Количество контуров уплотнителя<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Материал уплотнителя<span>-</span></td>
+          </tr>
+        </table>
+        <table class="options__table">
+          <tr>
+            <td>Тип дверных петель<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Количество дверных петель	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Угол открывания	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Съемные уголки для замены внутренней панели	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Функциональная задвижка	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Замок-невидимка	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Электронный замок со сканером отпечатка пальцев	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Регулятор защелки	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Доводчик	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Высота глазка	<span>-</span></td>
+          </tr>
+          <tr>
+            <td>Угол обзора дверного глазка	<span>-</span></td>
+          </tr>
+        </table>
+      </div>
 
+      <div class="card__option"></div>
+      <div class="card__option"></div>
+      <div class="card__option"></div>
+      <div class="card__option"></div>
     </div>
   </section>
 </body>
+
 </html>
