--- a/card-standart.html
+++ b/card-standart.html
@@ -319,6 +319,9 @@
       <div class="card__option"></div>
     </div>
   </section>
+  <section class="work__section">
+
+  </section>
 </body>
 
 </html>
