--- a/card-standart.html
+++ b/card-standart.html
@@ -319,8 +319,15 @@
       <div class="card__option"></div>
     </div>
   </section>
+  <section class="add-options__section">
+    <div class="container">
+      <h4 class="card-service__row-title">Дополнительные опции</h4>
+    </div>
+  </section>
   <section class="work__section">
-
+    <div class="container">
+      <h4 class="card-service__row-title">Как мы работаем</h4>
+    </div>
   </section>
 </body>
 
